--- a/task1.html
+++ b/task1.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script
+  src="https://unpkg.com/react@17/umd/react.development.js"
+  crossorigin
+></script>
+<script
+  src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
+  crossorigin
+></script>
   </head>
   <body>
     <div id="root"></div>
     <script>
       const rootElement = document.querySelector("#root");
-      const element = document.createElement("div");
-      element.innerText = "Hello World";
-      element.className = "container";
-      rootElement.appendChild(element);
+      // const element = document.createElement("div");
+        const element = React.createElement("h1", {className: "container"}, "Hello World");
+      //rootElement.appendChild(element);
+      ReactDOM.render(element,rootElement)
     </script>
   </body>
 </html>
