task 2 in progress

--- a/task2.html
+++ b/task2.html
@@ -23,8 +23,11 @@
       }
       function Button() {
         // code here
+        const button = React.createElement("button", {
+      className: "button"}, "click me")
         return;
       }
+        
 
       ReactDOM.render(Button(), rootElement);
     </script>
