--- a/task3.html
+++ b/task3.html
@@ -12,17 +12,29 @@
       src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
     ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- import babel -->
   </head>
   <body>
     <div id="root"></div>
     <!-- add the required type attribute -->
-    <script>
+    <script type = "text/babel">
       const rootElement = document.querySelector("#root");
 
       function Title() {
         // convert this to jsx
-        return React.createElement("h1", null, "JSX Rules!");
+        //return React.createElement("h1", null, "JSX Rules!");
+       /*const element = (
+           <h1>
+            JSX Rules!
+           </h1>
+        ) */
+        return (
+           <h1>
+            JSX Rules!
+           </h1>
+        ) 
+
       }
 
       ReactDOM.render(Title(), rootElement);
