--- a/task4.html
+++ b/task4.html
@@ -21,6 +21,11 @@
 
       function ListItem(props) {
         // code here
+        return (
+          <ul>
+            <li>{props.text}</li>
+          </ul>
+        );
       }
 
       ReactDOM.render(
