--- a/task5.html
+++ b/task5.html
@@ -21,17 +21,25 @@
 
       function ListItem(props) {
         // your code from task 4
+        console.log(props)
+        return (
+            <li>{props.text}</li>
+        );
       }
+      
 
       function List(props) {
         // render the children in a ul
+        console.log(props)
+        return (
+          <ul>{props.children}</ul>
+        )
       }
-
       ReactDOM.render(
         <List>
-          <ListItem text="Milk" />,
-          <ListItem text="Eggs" />,
-          <ListItem text="Flour" />,
+          <ListItem text="Milk" />
+          <ListItem text="Eggs" />
+          <ListItem text="Flour" />
         </List>,
         rootElement
       );
